--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: discord
+    timeout-minutes: 360
 
     steps:
     - name: Checkout code
@@ -24,6 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install certifi --upgrade
 
     - name: Run bot
       env:
