--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,26 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install certifi --upgrade
+
+    # Restaurer la base de données précédente si elle existe
+    - name: Restore database
+      uses: actions/cache@v2
+      with:
+        path: voice_stats.db
+        key: ${{ runner.os }}-db-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-db-
 
     - name: Run bot
       env:
         DISCORD_TOKEN: ${{ secrets.DISCORD_TOKEN }}
-        MONGODB_URI: ${{ secrets.MONGODB_URI }}
       run: |
         python bot.py
+
+    # Sauvegarder la base de données pour la prochaine exécution
+    - name: Save database
+      uses: actions/cache@v2
+      if: always()
+      with:
+        path: voice_stats.db
+        key: ${{ runner.os }}-db-${{ github.sha }}
