--- a/.github/workflows/rerun.yml
+++ b/.github/workflows/rerun.yml
@@ -16,5 +16,4 @@ jobs:
           curl -X POST \
           -H "Authorization: token $GH_TOKEN" \
           -H "Accept: application/vnd.github.v3+json" \
-          https://api.github.com/repos/${{ github.repository }}/actions/workflows/deploy.yml/dispatches \
-          -d '{"ref":"main"}'
+          https://api.github.com/repos/${{ github.repository }}/actions/workflows/deploy.yml/dispatches \-d '{"ref":"main"}'
